@@ -97,6 +97,15 @@ template <>
 class Perm<5> {
     public:
         /**
+         * The degree of the underlying symmetric group; that is, the
+         * template parameter \a n.
+         *
+         * This compile-time constant allows the programmer to extract \a n
+         * from the type (e.g., when writing templated code).
+         */
+        static constexpr int degree = 5;
+
+        /**
          * Denotes a native signed integer type large enough to count all
          * permutations on five elements.  In other words, this is a
          * native signed integer type large enough to store (5!).
