@@ -54,5 +54,4 @@ void addPerm6(CppUnit::TextUi::TestRunner& runner);
 void addPerm7(CppUnit::TextUi::TestRunner& runner);
 void addPrimes(CppUnit::TextUi::TestRunner& runner);
 void addRational(CppUnit::TextUi::TestRunner& runner);
-void addPermConv(CppUnit::TextUi::TestRunner& runner);
 
